--- a/normalizacion/index.html
+++ b/normalizacion/index.html
@@ -45,7 +45,7 @@
         <form id="esquinaForm">
           <div class="mb-3">
             <label for="esquinaInput" class="form-label">Esquina:</label>
-            <input type="text" class="form-control" id="esquinaInput" placeholder="Ej: Callao y Corrientes">
+            <input type="text" class="form-control" id="esquinaInput" placeholder="Ej: Callao y Corrientes, CABA">
           </div>
           <button type="submit" class="btn btn-primary">Normalizar</button>
         </form>
