--- a/normalizacion/index.html
+++ b/normalizacion/index.html
@@ -44,8 +44,16 @@
       <div class="tab-pane fade" id="esquina" role="tabpanel" aria-labelledby="esquina-tab">
         <form id="esquinaForm">
           <div class="mb-3">
-            <label for="esquinaInput" class="form-label">Esquina:</label>
-            <input type="text" class="form-control" id="esquinaInput" placeholder="Ej: Callao y Corrientes, CABA">
+            <label for="calle1" class="form-label">Primer Calle:</label>
+            <input type="text" class="form-control" id="calle1" placeholder="Ej: Callao">
+          </div>
+          <div class="mb-3">
+            <label for="calle2" class="form-label">Segunda Calle:</label>
+            <input type="text" class="form-control" id="calle2" placeholder="Ej: Corrientes">
+          </div>
+          <div class="mb-3">
+            <label for="localidad" class="form-label">Localidad:</label>
+            <input type="text" class="form-control" id="localidad" placeholder="Ej: CABA">
           </div>
           <button type="submit" class="btn btn-primary">Normalizar</button>
         </form>
